5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1709_3067.log
== TEST (2019-05-02 10:14:02) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		pv= (a+b+c)*d
		print(pv)
	elif(atk=="ESPADA"):
		pv= ((a+6) + (b+6) + (c+6) + (d+6))
		print(pv)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:19) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		pv= (a+b+c)*d
		print(pv)
	elif(atk=="ESPADA"):
		pv= ((a+6) + (b+6) + (c+6) + (d+6))
		print(pv)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:34) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		pv= (a+b+c)*d
		print(pv)
	elif(atk=="ESPADA"):
		pv= ((a+6) + (b+6) + (c+6) + (d+6))
		print(pv)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:40) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		pv= (a+b+c)*d
		print(pv)
	elif(atk=="ESPADA"):
		pv= ((a+6) + (b+6) + (c+6) + (d+6))
		print(pv)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:14:52) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		pv= (a+b+c)*d
		print(pv)
	elif(atk=="ESPADA"):
		pv= ((a+6) + (b+6) + (c+6) + (d+6))
		print(pv)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.187268
-- TEST CASE 1:
---- input:
CAUDA
3
5
2
4
---- correct output:
40
---- user output:
40
-- TEST CASE 2:
---- input:
ESPADA
3
3
3
3
---- correct output:
36
---- user output:
36
-- TEST CASE 3:
---- input:
ESPAD
3
3
3
3
---- correct output:
Entrada invalida
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:06) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:18:06) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.137488
-- TEST CASE 1:
---- input:
CAUDA
3
5
2
4
---- correct output:
40
---- user output:
40
-- TEST CASE 2:
---- input:
ESPADA
3
3
3
3
---- correct output:
36
---- user output:
36
-- TEST CASE 3:
---- input:
ESPAD
3
3
3
3
---- correct output:
Entrada invalida
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:07) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:16) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6)):
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:32) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6) and (atk=="CAUDA") and (atk=="ESPADA
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 6
    if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6) and (atk=="CAUDA") and (atk=="ESPADA
                                                                                                                              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:28) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6) and (atk=="CAUDA") and (atk=="ESPADA")):
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:22:54) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6) and (atk=="CAUDA") or (atk=="ESPADA")):
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:23:05) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6) and (atk=="CAUDA") or (atk=="ESPADA")):
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:23:18) 
-- CODE:
atk= input("tipo de ataque, cauda ou espada?: ").upper()
a= int(input("valor sorteado do dado: "))
b= int(input("valor sorteado do dado: "))
c= int(input("valor sorteado do dado: "))
d= int(input("valor sorteado do dado: "))
if((a>=1) and (a<=6) and (b>=1) and (b<=6) and (c>=1) and (c<=6) and (d>=1) and (d<=6) and (atk=="CAUDA") or (atk=="ESPADA")):
	if(atk=="CAUDA"):
		print((a+b+c)*d)
	elif(atk=="ESPADA"):
		print(a+6+b+6+c+6+d+6)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.15134
-- TEST CASE 1:
---- input:
CAUDA
3
5
2
4
---- correct output:
40
---- user output:
40
-- TEST CASE 2:
---- input:
ESPADA
3
3
3
3
---- correct output:
36
---- user output:
36
-- TEST CASE 3:
---- input:
ESPAD
3
3
3
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
